--- a/site/source/index.html.haml
+++ b/site/source/index.html.haml
@@ -1,2 +1,5 @@
-%h1 KOTY RZONDZOM ŚWIATEM, BO PORUSZA JE MIDDLEMAN
+%h1
+  KOTY
+  %strike RZONDZOM
+  RZĄDZĄ ŚWIATEM, BO PORUSZA JE MIDDLEMAN
 = partial(:'partials/footer', :locals => {:title => 'this is footer'})
