--- a/site/source/index.html.haml
+++ b/site/source/index.html.haml
@@ -1,5 +1,1 @@
-%h1
-  KOTY
-  %strike RZONDZOM
-  RZĄDZĄ ŚWIATEM, BO PORUSZA JE MIDDLEMAN
-= partial(:'partials/footer', :locals => {:title => 'this is footer'})
+%h1 Main page
