--- a/site/source/layouts/_nav.html.haml
+++ b/site/source/layouts/_nav.html.haml
@@ -3,3 +3,4 @@
     %li
       %a=link_to("Strona główna", "/")
       %a=link_to("Kalendarz", "/calendar")
+      %a=link_to("portfolio", "/portfolio")
