Fixing nav list and adding faq section

--- a/site/source/layouts/_nav.html.haml
+++ b/site/source/layouts/_nav.html.haml
@@ -2,5 +2,9 @@
   %ul
     %li
       %a=link_to("Strona główna", "/")
+    %li
       %a=link_to("Kalendarz", "/calendar")
+    %li
       %a=link_to("portfolio", "/portfolio")
+    %li
+      %a=link_to("F.A.Q.", "faq")
