--- a/site/source/layouts/_nav.html.haml
+++ b/site/source/layouts/_nav.html.haml
@@ -1,10 +1,10 @@
 %nav
   %ul
     %li
-      %a=link_to("Strona główna", "/")
+      %a=link_to(t("nav.main_page"), "/#{I18n.locale}")
     %li
-      %a=link_to("Kalendarz", "/calendar")
+      %a=link_to(t("nav.calendar"), translated_url(I18n.locale, "calendar")) #- this one needs translate because has different url for various langs
     %li
-      %a=link_to("portfolio", "/portfolio")
+      %a=link_to("Portfolio", "/#{I18n.locale}/portfolio")
     %li
-      %a=link_to("F.A.Q.", "faq")
+      %a=link_to("F.A.Q.", "/#{I18n.locale}/faq")
