New site structure -> moving site files to localizable

--- a/site/source/layouts/_footer.haml
+++ b/site/source/layouts/_footer.haml
@@ -1,6 +1,9 @@
-.tittle
-  =title
-.link
-=link_to("Read Documentation",
-  "https://middlemanapp.com/basics/templating_language/",
-  target: "_blank")
+%ul
+  %li
+    .socialmedia-link=link_to("Facebook",
+      "http://facebook.com/montazownia",
+      target: "_blank")
+  %li
+    .socialmedia-link=link_to("Instagram",
+      "http://instagram.com/montazownia",
+      target: "_blank")
