--- a/site/source/layouts/layout.html.haml
+++ b/site/source/layouts/layout.html.haml
@@ -4,10 +4,11 @@
     %meta{'charset' => 'utf-8'}
     %meta{'http-equiv' => 'x-ua-compatible', 'content' => 'ie=edge'}
     %meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1, shrink-to-fit=no' }
-    %title= current_page.data.title || "Montażownia"
+    %title= current_page.data.title || "Montażownia Tatuażu"
     = stylesheet_link_tag "site"
     = javascript_include_tag "site"
   %body
-    =partial(:'layouts/nav')
-    =yield
-    = partial(:'layouts/footer', :locals => {:title => 'this is footer'})
+    = partial(:'layouts/language_choice')
+    = partial(:'layouts/nav')
+    = yield
+    = partial(:'layouts/footer')
