--- a/site/source/partials/_calendar_iframe.html.erb
+++ b/site/source/partials/_calendar_iframe.html.erb
@@ -1,23 +1,23 @@
 <% source = '' %>
-<% if is_defined(studio) %>
+<% if !(defined?(studio)).nil? %>
   <% source = source + 'src=montazownia.tattoo%40gmail.com&amp;color=%23125A12&amp;' %>
 <% end %>
-<% if is_defined(lp_hard) %>
+<% if !(defined?(lp_hard)).nil? %>
   <% source = source + 'src=8mlrp5c1kuslrt6q3pp5abcuto%40group.calendar.google.com&amp;color=%238C500B&amp;' %>
 <% end %>
-<% if is_defined(lp_soft) %>
+<% if !(defined?(lp_soft)).nil? %>
   <% source = source + 'src=880rmk27v04c37gtert5qin4s8%40group.calendar.google.com&amp;color=%23875509&amp;' %>
 <% end %>
-<% if is_defined(private_events) %>
+<% if !(defined?(private_events)).nil? %>
   <% source = source + 'src=i51jdjg50gnmr9a7mc5rr4im5s%40group.calendar.google.com&amp;color=%232F6309&amp;' %>
 <% end %>
-<% if is_defined(tattoo_hard) %>
+<% if !(defined?(tattoo_hard)).nil? %>
   <% source = source + 'src=60cecrdf8t9lg6g0ldunrdtuo4%40group.calendar.google.com&amp;color=%23182C57&amp;' %>
 <% end %>
-<% if is_defined(tattoo_undefined) %>
+<% if !(defined?(tattoo_undefined)).nil? %>
   <% source = source + 'src=tpkrkqf9h18ait78i63gm4qr5s%40group.calendar.google.com&amp;color=%232952A3&amp;' %>
 <% end %>
-<% if is_defined(tattoo_soft) %>
+<% if !(defined?(tattoo_soft)).nil? %>
   <% source = source + 'src=uo5vhkk4togfp51j1ttoedpdo0%40group.calendar.google.com&amp;color=%231B887A&amp;' %>
 <% end %>
 
