--- a/site/source/layouts/_language_choice.html.haml
+++ b/site/source/layouts/_language_choice.html.haml
@@ -1,4 +1,4 @@
 %ul
   - other_langs.each do |lang|
     %li
-      %a{'href' => translated_url(lang, current_page.data.name)}=lang
+      =link_to(lang, translated_url(lang, current_page.data.name))
