--- a/site/source/layouts/layout.html.haml
+++ b/site/source/layouts/layout.html.haml
@@ -5,8 +5,10 @@
     %meta{'http-equiv' => 'x-ua-compatible', 'content' => 'ie=edge'}
     %meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1, shrink-to-fit=no' }
     %title= current_page.data.title || "Montażownia Tatuażu"
+    %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.7.0/fullcalendar.min.css",
+    :rel => "stylesheet",
+    :type => "text/css"}
     = stylesheet_link_tag "site"
-    = javascript_include_tag "site"
   %body
     = partial(:'layouts/language_choice')
     = partial(:'layouts/nav')
