--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -2,23 +2,54 @@ body {
   background-color: #fbc547;
   color: #333;
   font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
+  "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
+  "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
+  "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
   padding: 18vh 1rem;
   text-align: center;
 }
 
 a {
-  color: rgba(#000, 0.7);
+  color: inherit;
+  outline: none;
 
   &:focus,
   &:hover {
-    color: rgba(#000, 0.6);
+    color: inherit;
   }
+}
+
+button {
+  outline: none;
 }
 
 .middleman-logo {
   margin-bottom: 1rem;
   width: 10rem;
+}
+
+#calendar {
+  display: block;
+  width: 800px;
+  margin: auto;
+  background-color: white;
+}
+
+.fc .fc-toolbar>*>* {
+  margin-left: 0;
+  border-radius: 0;
+  background: white;
+  box-shadow: none;
+  border: none;
+  &:hover {
+    background: rgba(0,0,0,0.1);
+  }
+}
+
+.fc-unthemed td.fc-today {
+  background: rgba(0,0,0,0.1);
+}
+
+.fc-day-top {
+  background-color: rgba(0,0,0,0.1) !important;
 }
