--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -53,3 +53,7 @@ button {
 .fc-day-top {
   background-color: rgba(0,0,0,0.1) !important;
 }
+
+.fc-unthemed .fc-content {
+  white-space: normal;
+}
