adding translations to calendar

--- a/site/source/js/_calendar.html.erb
+++ b/site/source/js/_calendar.html.erb
@@ -39,7 +39,6 @@ $(document).ready(function() {
 
     });
     setTimeout(function () {
-        $('.fc-title').text("Zajęty(a)");
+        $('.fc-title').text("<%= busy_text %>");
     }, 400);
 });
-
