Fix no event title after day change

--- a/site/source/js/_calendar.html.erb
+++ b/site/source/js/_calendar.html.erb
@@ -38,6 +38,11 @@ $(document).ready(function() {
         ]
 
     });
+    $('.fc-button').on('click', function() {
+        setTimeout(function () {
+        $('.fc-title').text("Zajęty(a)");
+        }, 400);
+    });
     setTimeout(function () {
         $('.fc-title').text("<%= busy_text %>");
     }, 400);
