--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -1,11 +1,6 @@
 body {
-  background-color: #fbc547;
-  color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-  "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-  "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-  "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  padding: 18vh 1rem;
+  background-color: #057ec4;
+  color: #d6d6d6;
   text-align: center;
 }
 
@@ -21,11 +16,6 @@ a {
 
 button {
   outline: none;
-}
-
-.middleman-logo {
-  margin-bottom: 1rem;
-  width: 10rem;
 }
 
 #calendar {
