Register click event

--- a/site/source/js/_calendar.html.erb
+++ b/site/source/js/_calendar.html.erb
@@ -39,6 +39,9 @@ $(document).ready(function() {
         ],
         eventAfterAllRender: function() {
             $('.fc-title').text(busy_text);
+        },
+        dayClick: function(date) {
+            alert('Date: ' + date.format());
         }
     });
 });
