Add all libraries

--- a/site/source/layouts/_language_choice.html.haml
+++ b/site/source/layouts/_language_choice.html.haml
@@ -1,4 +1,4 @@
-%ul
-  - other_langs.each do |lang|
-    %li
-      =link_to(lang, translated_url(lang, current_page.data.name))
+-#%ul
+-#  - other_langs.each do |lang|
+-#    %li
+-#      =link_to(lang, translated_url(lang, current_page.data.name))
