--- a/site/source/layouts/_footer.haml
+++ b/site/source/layouts/_footer.haml
@@ -8,8 +8,9 @@
       "http://instagram.com/montazownia",
       target: "_blank")
 
-%script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"}
-%script{:src => "https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.2/moment.min.js"}
-%script{:src => "https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.7.0/fullcalendar.min.js"}
-%script{:src => "https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.7.0/gcal.min.js"}
+= javascript_include_tag "lib/jQuery/jquery.min"
+= javascript_include_tag "lib/Moment/moment.min"
+= javascript_include_tag "lib/FullCalendar/fullcalendar.min"
+= javascript_include_tag "lib/gCal/gcal.min"
+= javascript_include_tag "lib/MaterialDesignLite/material.min"
 = javascript_include_tag "site"
