--- a/site/source/layouts/_nav.html.haml
+++ b/site/source/layouts/_nav.html.haml
@@ -1,10 +1,34 @@
-%nav
-  %ul
-    %li
-      =link_to(t("nav.main_page"), "/#{I18n.locale}")
-    %li
-      =link_to(t("nav.calendar"), translated_url(I18n.locale, "calendar")) #- this one needs translate because has different url for various langs
-    %li
-      =link_to("Portfolio", "/#{I18n.locale}/portfolio")
-    %li
-      =link_to("F.A.Q.", "/#{I18n.locale}/faq")
+-#%nav
+-#  %ul
+-#    %li
+-#      =link_to(t("nav.main_page"), "/#{I18n.locale}")
+-#    %li
+-#      =link_to(t("nav.calendar"), translated_url(I18n.locale, "calendar")) #- this one needs translate because has different url for various langs
+-#    %li
+-#      =link_to("Portfolio", "/#{I18n.locale}/portfolio")
+-#    %li
+-#      =link_to("F.A.Q.", "/#{I18n.locale}/faq")
+
+.mdl-layout.mdl-js-layout.mdl-layout--fixed-header
+  %header.mdl-layout__header
+    .mdl-layout__header-row
+      / Title
+      %span.mdl-layout-title MONTAZOWNIA
+      / Add spacer, to align navigation to the right
+      .mdl-layout-spacer
+      / Navigation. We hide it in small screens.
+      %nav.mdl-navigation.mdl-layout--large-screen-only
+        %a.mdl-navigation__link{:href => ""} STRONA GŁÓWNA
+        %a.mdl-navigation__link{:href => ""} KALENDARZ
+        %a.mdl-navigation__link{:href => ""} PORTFOLIO
+        %a.mdl-navigation__link{:href => ""} F.A.Q.
+        %a.mdl-navigation__link{:href => ""} ENGLISH
+  .mdl-layout__drawer.mdl-layout--small-screen-only
+    %span.mdl-layout-title MONTAŻOWNIA
+    %nav.mdl-navigation
+      %a.mdl-navigation__link{:href => ""} STRONA GŁÓWNA
+      %a.mdl-navigation__link{:href => ""} KALENDARZ
+      %a.mdl-navigation__link{:href => ""} PORTFOLIO
+      %a.mdl-navigation__link{:href => ""} F.A.Q.
+      %a.mdl-navigation__link{:href => ""} ENGLISH
+
