--- a/site/source/layouts/partials/_nav_links.html.haml
+++ b/site/source/layouts/partials/_nav_links.html.haml
@@ -8,6 +8,6 @@
   "/#{I18n.locale}/portfolio",
   :class=> "mdl-navigation__link")
 =link_to("F.A.Q.",
-  "/#{I18n.locale}/faq",
+  translated_url(I18n.locale, "faq"),
   :class=> "mdl-navigation__link")
 =partial("layouts/partials/language_choice")
