--- a/site/source/layouts/layout.html.haml
+++ b/site/source/layouts/layout.html.haml
@@ -1,18 +1,6 @@
 !!!
-%html
-  %head
-    %meta{'charset' => 'utf-8'}
-    %meta{'http-equiv' => 'x-ua-compatible', 'content' => 'ie=edge'}
-    %meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1, shrink-to-fit=no' }
-    %title= current_page.data.title || "Montażownia Tatuażu"
-    %link{:rel => :stylesheet, :type => :"text/css",
-          :href => "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700"}
-    %link{:rel => :stylesheet, :type => :"text/css",
-          :href => "https://fonts.googleapis.com/icon?family=Material+Icons"}
-    = stylesheet_link_tag "lib/fullcalendar/fullcalendar.min"
-    = stylesheet_link_tag "lib/normalize/normalize"
-    = stylesheet_link_tag "lib/MaterialDesignLite/material.min"
-    = stylesheet_link_tag "site"
+%html{'lang' => I18n.locale}
+  =partial(:'layouts/partials/head')
   %body
     = partial(:'layouts/partials/nav')
     %main.mdl-layout__content
