--- a/site/source/layouts/partials/_nav_links.html.haml
+++ b/site/source/layouts/partials/_nav_links.html.haml
@@ -5,7 +5,7 @@
   translated_url(I18n.locale, "calendar"),
   :class=> "mdl-navigation__link")
 =link_to("Portfolio",
-  "/#{I18n.locale}/portfolio",
+  translated_url(I18n.locale, "portfolio"),
   :class=> "mdl-navigation__link")
 =link_to("F.A.Q.",
   translated_url(I18n.locale, "faq"),
