--- a/site/source/localizable/portfolio.html.haml
+++ b/site/source/localizable/portfolio.html.haml
@@ -2,4 +2,4 @@
 name: "portfolio"
 ---
 -sitemap.resources.select{ |r| r.path.start_with?("images/portfolio") }.each do |image|
-  =image_tag(image.path.gsub('images/', ''), :class => "thumbnail")
+  =image_tag(image.path.gsub('images/', ''), :class => "thumbnail", :alt => get_alt(image))
