--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -3,3 +3,11 @@ name: "main"
 ---
 
 %h2 Widzę, że chcesz ;)
+
+
+%h3 Zespół
+%p Tutaj info o nas, kim jesteśmy i co robimy, plus nasze śliczne twarze
+%h3 Historia
+%p Jak powstała montażoniwa i przez co przeszła po drodze. No a trochę już tego jest, co nie?
+%h3 Montaż
+%p Jaka przyświeca nam idea podczas tworzenia tatuaży. No bo my mamy zajawę.
