--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -2,12 +2,17 @@
 name: "main"
 ---
 
-%h2 Widzę, że chcesz ;)
-
-
-%h3 Zespół
-%p Tutaj info o nas, kim jesteśmy i co robimy, plus nasze śliczne twarze
-%h3 Historia
-%p Jak powstała montażoniwa i przez co przeszła po drodze. No a trochę już tego jest, co nie?
-%h3 Montaż
-%p Jaka przyświeca nam idea podczas tworzenia tatuaży. No bo my mamy zajawę.
+%h1 Widzę, że chcesz ;)
+%article
+  %section
+    %h2 Zespół
+    %header Tutaj krótkie info o nas, kim jesteśmy i co robimy, plus nasze śliczne twarze
+    %p tutaj dopisane już trochę bardziej szczegółowo
+  %section
+    %h2 Historia
+    %header i znowu kilka zdań o tym jak to się zaczęło
+    %p A potem jak się rozwijało
+  %section
+    %h2 Montaż
+    %header krótki opis idei dziarania
+    %p i rozwinięcie myśli
