--- a/site/source/layouts/partials/_footer.haml
+++ b/site/source/layouts/partials/_footer.haml
@@ -1,9 +1,10 @@
-%ul
-  %li
-    .socialmedia-link=link_to("Facebook",
-      "http://facebook.com/montazownia",
-      target: "_blank")
-  %li
-    .socialmedia-link=link_to("Instagram",
-      "http://instagram.com/montazownia",
-      target: "_blank")
+%footer
+  %ul
+    %li
+      .socialmedia-link=link_to("Facebook",
+        "http://facebook.com/montazownia",
+        target: "_blank")
+    %li
+      .socialmedia-link=link_to("Instagram",
+        "http://instagram.com/montazownia",
+        target: "_blank")
