--- a/site/source/localizable/portfolio.html.haml
+++ b/site/source/localizable/portfolio.html.haml
@@ -1,5 +1,6 @@
 ---
 name: "portfolio"
 ---
+%h1 Portfolio
 -sitemap.resources.select{ |r| r.path.start_with?("images/portfolio") }.each do |image|
   =image_tag(image.path.gsub('images/', ''), :class => "thumbnail", :alt => get_alt(image))
