--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -1,16 +1,20 @@
 ---
 name: "faq"
+dont_translate_header: true
+header: "F.A.Q."
 ---
-%article
-  %h1 F.A.Q.
-  %header Tutaj odpowiemy na wszystkie wasze pytania
-  %ul.faq-list
-    -get_faq_list.each do |item|
-      %li
-        %section
-          %header
-            %h2.question=item.question
-          %p.answer=item.answer
-          -if item.link
-            %h3=link_to(item.link.info, item.link.address, target: "_blank")
-        %hr
+%section
+  %header
+    %h2
+      %strong Tutaj odpowiemy na wszystkie wasze pytania
+%ul.faq-list
+  -get_faq_list.each do |item|
+    %li
+      %section
+        %header
+          %h3
+            %strong.question=item.question
+        %p.answer=item.answer
+        -if item.link
+          %h4=link_to(item.link.info, item.link.address, target: "_blank")
+      %hr
