--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -1,18 +1,23 @@
 ---
 name: "main"
+dont_translate_header: true
+header: "Widzę, że chcesz"
 ---
-
-%h1 Widzę, że chcesz ;)
-%article
-  %section
+%section
+  %header
     %h2 Zespół
-    %header Tutaj krótkie info o nas, kim jesteśmy i co robimy, plus nasze śliczne twarze
-    %p tutaj dopisane już trochę bardziej szczegółowo
-  %section
+    %h3
+      %strong Tutaj krótkie info o nas, kim jesteśmy i co robimy
+  %p tutaj dopisane już trochę bardziej szczegółowo
+%section
+  %header
     %h2 Historia
-    %header i znowu kilka zdań o tym jak to się zaczęło
-    %p A potem jak się rozwijało
-  %section
+    %h3
+      %strong i znowu kilka zdań o tym jak to się zaczęło
+  %p A potem jak się rozwijało
+%section
+  %header
     %h2 Montaż
-    %header krótki opis idei dziarania
-    %p i rozwinięcie myśli
+    %h3
+      %strong krótki opis idei dziarania
+  %p i rozwinięcie myśli
