--- a/site/source/layouts/partials/_footer.haml
+++ b/site/source/layouts/partials/_footer.haml
@@ -10,3 +10,4 @@
         .socialmedia-link=link_to("Instagram",
           "http://instagram.com/montazownia",
           target: "_blank")
+  %h6 Copyright
