Ruby za Ciebie zrubi, czyli refactor navlinksów <3

--- a/site/source/layouts/main/_head.html.haml
+++ b/site/source/layouts/main/_head.html.haml
@@ -1,26 +1,22 @@
-%head
-  %meta{'charset' => 'utf-8'}
-  %meta{'http-equiv' => 'x-ua-compatible', 'content' => 'ie=edge'}
-  %meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1, shrink-to-fit=no' }
-  %meta{'name' => 'description', 'content' => t("descriptions.#{current_page.data.name}")}
-  %title= get_title(current_page.data.name)
-  %meta{'http-equiv' => 'Last-Modified', 'content' => get_current_time}
-  %meta{'name' => 'geo.position', 'content' => '52.39792742; 16.92453504'}
-  %meta{'name' => 'geo.placename', 'content' => 'ul. Różana 6/LU1, Poznań 61-577, PL'}
-  %meta{'name' => 'geo.region', 'content' => 'POL-Poland'}
-  %meta{'name' => 'ICBM', 'content' => '52.39792742; 16.92453504'}
-  %meta{'name' => 'generator', 'content' => 'middleman'}
-  - other_langs.each do |lang|
-    %link{:rel => 'alternate', :href => translated_url(lang, current_page.data.name) , :hreflang => lang}
-
-  %link{:rel => :stylesheet, :type => :"text/css",
-        :href => "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700"}
-  %link{:rel => :stylesheet, :type => :"text/css",
-        :href => "https://fonts.googleapis.com/icon?family=Material+Icons"}
-  %link{:rel => 'icon', :type => 'image/png', :sizes => '16x16', :href => '/images/favicons/favicon-16x16.png'}
-  %link{:rel => 'icon', :type => 'image/png', :sizes => '32x32', :href => '/images/favicons/favicon-32x32.png'}
-  %link{:rel => 'icon', :type => 'image/png', :sizes => '96x96', :href => '/images/favicons/favicon-96x96.png'}
-  = stylesheet_link_tag "lib/fullcalendar/fullcalendar.min"
-  = stylesheet_link_tag "lib/normalize/normalize"
-  = stylesheet_link_tag "lib/MaterialDesignLite/material.min"
-  = stylesheet_link_tag "site"
+%meta{'charset' => 'utf-8'}
+%meta{'http-equiv' => 'x-ua-compatible', 'content' => 'ie=edge'}
+%meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1, shrink-to-fit=no' }
+%meta{'http-equiv' => 'Last-Modified', 'content' => get_current_time}
+%meta{'name' => 'geo.position', 'content' => '52.39792742; 16.92453504'}
+%meta{'name' => 'geo.placename', 'content' => 'ul. Różana 6/LU1, Poznań 61-577, PL'}
+%meta{'name' => 'geo.region', 'content' => 'POL-Poland'}
+%meta{'name' => 'ICBM', 'content' => '52.39792742; 16.92453504'}
+%meta{'name' => 'generator', 'content' => 'middleman'}
+%link{:rel => :stylesheet, :type => :"text/css",
+      :href => "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700"}
+%link{:rel => :stylesheet, :type => :"text/css",
+      :href => "https://fonts.googleapis.com/icon?family=Material+Icons"}
+%link{:rel => 'icon', :type => 'image/png', :sizes => '16x16', :href => '/images/favicons/favicon-16x16.png'}
+%link{:rel => 'icon', :type => 'image/png', :sizes => '32x32', :href => '/images/favicons/favicon-32x32.png'}
+%link{:rel => 'icon', :type => 'image/png', :sizes => '96x96', :href => '/images/favicons/favicon-96x96.png'}
+-if current_page.data.additional_stylesheets?
+  -current_page.data.additional_stylesheets.each do |stylesheet|
+    = stylesheet_link_tag stylesheet
+= stylesheet_link_tag "lib/normalize/normalize"
+= stylesheet_link_tag "lib/MaterialDesignLite/material.min"
+= stylesheet_link_tag "site"
