--- a/site/source/localizable/blog.html.erb
+++ b/site/source/localizable/blog.html.erb
@@ -1,9 +1,10 @@
 ---
-pageable: true
-per_page: 5
-name: "blog"
+id: "blog"
+ordinal: "6"
 dont_translate_header: true
 header: "Blog"
+pageable: true
+per_page: 5
 ---
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
