--- a/site/source/localizable/calendar.html.haml
+++ b/site/source/localizable/calendar.html.haml
@@ -1,6 +1,11 @@
 ---
-name: "calendar"
+id: "calendar"
+ordinal: "3"
 header: "sites.calendar.title"
+additional_stylesheets:
+  - "lib/fullcalendar/fullcalendar.min"
+additional_javascripts:
+  - "lib/FullCalendar/fullcalendar.min"
 ---
 %section
   %header
