--- a/site/source/layouts/main/_language_choice.html.haml
+++ b/site/source/layouts/main/_language_choice.html.haml
@@ -6,7 +6,7 @@
 %ul.mdl-menu.mdl-menu--bottom-right.mdl-js-menu.mdl-js-ripple-effect{:for => "menu-lower-right"}
   - other_langs.each do |lang|
     %li.mdl-menu__item.active-lang
-      =link_to(translated_url(lang, current_page.data.name), :lang => lang, :class => "other-lang") do
+      =link_to(translated_url(lang, current_page.data.id), :lang => lang, :class => "other-lang") do
         =image_tag("images/flags/#{lang}.png")
         %span=full_lang_name(lang)
 
