Fix console errors

--- a/site/source/localizable/calendar.html.haml
+++ b/site/source/localizable/calendar.html.haml
@@ -5,7 +5,10 @@ header: "sites.calendar.title"
 additional_stylesheets:
   - "lib/fullcalendar/fullcalendar.min"
 additional_javascripts:
+  - "lib/Moment/moment.min"
   - "lib/FullCalendar/fullcalendar.min"
+  - "lib/gCal/gcal.min"
+  - "calendar.js"
 ---
 %section
   %header
