Change navbar transparency

--- a/site/source/stylesheets/_navbar.scss
+++ b/site/source/stylesheets/_navbar.scss
@@ -1,12 +1,14 @@
 @import "variables";
 
+.nav-bar {
+  position: fixed;
+}
+
 .active-lang img {
   height: 23px;
   width: auto;
   padding: 0 $baseline*3;
 }
-
-
 
 .other-lang {
   display: flex;
