--- a/site/source/layouts/main/_nav.html.haml
+++ b/site/source/layouts/main/_nav.html.haml
@@ -1,5 +1,5 @@
 .mdl-layout.mdl-layout--no-desktop-drawer-button.mdl-js-layout.mdl-layout--fixed-header
-  .mdl-layout__header
+  .mdl-layout__header.mdl-layout__header--transparent.nav-bar.navbarTrans
     .mdl-layout__header-row
       %header
         %h1
