--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 body {
+  font-family: 'Roboto', sans-serif;
   background-color: #057ec4;
   color: #d6d6d6;
   text-align: center;
