--- a/site/source/localizable/portfolio.html.haml
+++ b/site/source/localizable/portfolio.html.haml
@@ -3,6 +3,8 @@ id: "portfolio"
 ordinal: "2"
 dont_translate_header: true
 header: "Portfolio"
+additional_javascripts:
+  - "portfolio.js"
 ---
 %section.portfolio
   .portfolio-wrapper
