--- a/site/source/stylesheets/_portfolio.scss
+++ b/site/source/stylesheets/_portfolio.scss
@@ -2,41 +2,79 @@
 
 .portfolio-wrapper {
   max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   padding: 0 30px;
-
-
-  &:after {
-    content: '';
-    flex: auto;
+  column-count: 5;
+  column-gap: 0;
+  @media screen and (max-width: 768px) {
+    max-width: 600px;
+    column-count: 3;
   }
+  //display: flex;
+  //flex-wrap: wrap;
+  //justify-content: space-between;
+
+
+  //&:after {
+  //  content: '';
+  //  flex: auto;
+  //}
 
   &__element {
+
+    &:first-child {
+      margin-top: 0;
+    }
+
     margin: 10px 10px;
     transition: 0.3s transform ease;
     cursor: pointer;
+    position: relative;
 
-    &:hover {
-      transform: scale(1.5, 1.5);
+    &:after {
+      content: '';
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      transition: background-color 0.3s ease-in;
+      background-color: transparent;
     }
+
+    &:hover:after {
+      background-color: rgba(0,0,0,0.5);
+    }
+
+    //&:hover {
+    //  transform: scale(1.5, 1.5);
+    //}
 
     img {
-      max-height: 200px;
+      //max-height: 200px;
+      max-width: 170px;
     }
 
-    &--opened {
-      transform: scale(1,1);
-    }
+    //&--opened {
+    //  transform: scale(1,1);
+    //}
   }
 }
 
 .dialog-content {
   width: 800px;
-  top: 0;
-  bottom: 0;
   position: fixed;
+  top: 50%;
+  transform: translate(0, -50%);
+  &::backdrop {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+.dialog-content + .backdrop {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .dialog-image {
