--- a/site/source/layouts/main/_nav.html.haml
+++ b/site/source/layouts/main/_nav.html.haml
@@ -7,7 +7,7 @@
       .mdl-layout-spacer
       %nav.mdl-navigation.mdl-layout--large-screen-only
         =partial("layouts/main/nav_links")
-  .mdl-layout__drawer
+  .mdl-layout__drawer{:style => "position: fixed;"}
     %header
       %h1
         %span.mdl-layout-title MONTAŻOWNIA TATUAŻU
