--- a/site/source/layouts/main/_nav_links.html.haml
+++ b/site/source/layouts/main/_nav_links.html.haml
@@ -1,5 +1,5 @@
 -get_navlink_sites.each do |page|
   =link_to(get_navlink_title(page.data.id), 
   page.url, 
-  :class=> "mdl-navigation__link") 
+  :class=> "mdl-navigation__link nav-bar__link")
 =partial("layouts/main/language_choice")
