--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -4,6 +4,14 @@ ordinal: "1"
 dont_translate_header: true
 header: "Widzę, że chcesz"
 ---
+%section#welcomescreen.home__section.welcome-wrapper
+  %figure.welcome__image
+    =image_tag("https://scontent-waw1-1.cdninstagram.com/t51.2885-19/s150x150/21042466_1932071607066583_7762185533819715584_a.jpg",
+     :style => "height: 300px;")
+  %header.welcome__text
+    %h1.mdl-typography--display-2 WIDZĘ, ŻE CHCESZ
+  .scroller
+
 %section
   %header
     %h2 Zespół
