--- a/site/source/stylesheets/_navbar.scss
+++ b/site/source/stylesheets/_navbar.scss
@@ -2,6 +2,15 @@
 
 .nav-bar {
   position: fixed;
+  background: #32e0dd; /* Old browsers */
+  background: -moz-linear-gradient(top, #16f6ed 0%, #fff 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #16f6ed 0%,#fff 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #16f6ed 0%,#fff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  color: $default-dark;
+
+  & &__link {
+    color: $default-dark;
+  }
 }
 
 .active-lang img {
@@ -19,4 +28,8 @@
     padding: 0;
     padding-right: $baseline;
   }
+}
+
+.mdl-layout__obfuscator {
+  position: fixed;
 }
